--- a/projects/index.html
+++ b/projects/index.html
@@ -25,7 +25,7 @@
   <!-- MENU -->
   <nav class="navbar navbar-expand-sm navbar-light">
     <div class="container">
-      <a class="navbar-brand" href="/home/"><i class='uil uil-user'></i>Mourad Amri</a>
+      <a class="navbar-brand" href="/"><i class='uil uil-user'></i>Mourad Amri</a>
 
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -37,22 +37,21 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav mx-auto">
           <li class="nav-item">
-            <a href="/home/#about" class="nav-link"><span data-hover="About">About</span></a>
+            <a href="/#about" class="nav-link"><span data-hover="About">About</span></a>
           </li>
           <li class="nav-item">
-            <a href="/home/#projects" class="nav-link"><span data-hover="Progetti">Progetti</span></a>
+            <a href="/#projects" class="nav-link"><span data-hover="Progetti">Progetti</span></a>
           </li>
           <li class="nav-item">
-            <a href="/home/#resume" class="nav-link"><span data-hover="Resume">Resume</span></a>
+            <a href="/#resume" class="nav-link"><span data-hover="Resume">Resume</span></a>
           </li>
           <li class="nav-item">
-            <a href="/home/#contact" class="nav-link"><span data-hover="Contatti">Contatti</span></a>
+            <a href="/#contact" class="nav-link"><span data-hover="Contatti">Contatti</span></a>
           </li>
         </ul>
       </div>
     </div>
   </nav>
-
     <!-- Projects -->
     <section class="projects-section" id="project">
         <div class="container">
