fixed projects button

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                     <div class="col-lg-6 col-md-6 col-12">
                       <div class="text-center center">
                         <div class="col-lg-8 mx-auto">
-                          <a href="projects.html" class="btn custom-btn">Vai a tutti i progetti</a>
+                          <a href="/projects/" class="btn custom-btn">Vai a tutti i progetti</a>
                       </div> 
                       </div>
                     </div>
