--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
             <form action="https://formsubmit.co/7c7373933461614b4cfc06236b86b95b" method="POST">
               <div class="row">
 
-                <input type="hidden" name="_next" value="https://home-djulh.run-eu-central1.goorm.io/home/thanks.html">
+                <input type="hidden" name="_next" value="https://mouradamri.ml/thanks">
                 <input type="hidden" name="_subject" value="Nuovo messaggio da Portfolio!">
                 <input type="hidden" name="_captcha" value="false">
                 <input type="hidden" name="_template" value="box">
