--- a/thanks/index.html
+++ b/thanks/index.html
@@ -4,7 +4,7 @@
         <title></title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="css/style.css" rel="stylesheet">
+        <link href="../css/bootstrap.min.css" rel="stylesheet">
     </head>
     <body>
         <!-- Ringraziamenti per aver mandato un messaggio -->
@@ -21,7 +21,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <a href="/home/" class="btn btn-primary">Torna alla home</a>
+                    <a href="/" class="btn btn-primary">Torna alla home</a>
                 </div>
             </div>
         </div>
