--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>E-Portfolio</title>
+  <title>E-Portfolio - Mourad Amri</title>
 
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/main.css">
