--- a/index.html
+++ b/index.html
@@ -197,7 +197,27 @@
               </div>
             </div>
 
+            <div class="timeline-wrapper">
+              <div class="timeline-yr">
+                <span>2022</span>
+              </div>
+              <div class="timeline-info">
+                <h3><span>Comix - Due Mari</h3>
+                <p>Attività realizzate presso il Due Mari durante il periodo del Comix.</p>
+              </div>
+            </div>
 
+            <div class="timeline-wrapper">
+              <div class="timeline-yr">
+                <span>2022</span>
+              </div>
+              <div class="timeline-info">
+                <h3><span>Luci Sotto le Stelle</h3>
+                <p>Attività svolte all'aperto presso il corso Numistrano di Lamezia Terme. In collaborazione con Go-Kart.</p>
+              </div>
+            </div>
+
+      
           </div>
         </div>
 
