--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
         <div class="col-lg-7 col-md-12 col-12 d-flex align-items-center">
           <div class="about-text">
-            <small class="small-text">Benvenuti tuti <span class="mobile-block">nel mio portfolio!</span></small>
+            <small class="small-text">Benvenuti <span class="mobile-block">nel mio portfolio!</span></small>
             <h1 class="animated animated-text">
               <span class="mr-2">Ciao, sono</span>
               <div class="animated-info">
